--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         So if you're interested in exploring the world of wishes and discovering new ways to make them come true, come
         join us on Discord today! We can't wait to meet you and help you on your journey.</h4>
+    <a href="https://blinkingcape.github.io/wish/metods.html" class="Download">Methods!</a>
 </div>
 
 
