--- a/metods.html
+++ b/metods.html
@@ -76,6 +76,10 @@
             interested in exploring the world of lucid dreaming, there are many resources available online and in books
             that can help you get started.</h3>
         <a href="https://discord.gg/MskbaEz5zG" class="Download">Join here the project discord here!</a>
+        <br>
+        <br>
+        <h5>Home page button below</h5>
+        <a href="https://discord.gg/MskbaEz5zG" class="Download">Home</a>
 </div>
 
 
