--- a/metods.html
+++ b/metods.html
@@ -79,7 +79,7 @@
         <br>
         <br>
         <h5>Home page button below</h5>
-        <a href="https://blinkingcape.github.io/wish/metods.html" class="Download">Home</a>
+        <a href="https://blinkingcape.github.io/wish/index.html" class="Download">Home</a>
 </div>
 
 
